changed merch list

--- a/merch.html
+++ b/merch.html
@@ -49,9 +49,16 @@
                 <button class="btn">Buy Now</button>
             </div>
             <div class="merch-item">
-                <img src="images/album.jpg" alt="Album">
-                <h3>New Album</h3>
-                <p>Get the latest album from G Family and enjoy our newest hits!</p>
+                <img src="images/album.jpg" alt="Beanie">
+                <h3>G Fam Beanie</h3>
+                <p></p>
+                <div class="price">$15.00</div>
+                <button class="btn">Buy Now</button>
+            </div>
+            <div class="merch-item">
+                <img src="images/album.jpg" alt="Ski Mask">
+                <h3>G Fam Ski-Mask</h3>
+                <p></p>
                 <div class="price">$15.00</div>
                 <button class="btn">Buy Now</button>
             </div>
