--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.cdnfonts.com/css/pp-right-gothic" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/helvair-graffiti" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.2.3/css/flag-icons.min.css"/>
+    <link href="https://fontmeme.com/jfont/hangyaku-font/" rel="stylesheet">
+
     <!-- Flag Icons CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.6.0/css/flag-icon.min.css">
 </head>
@@ -48,6 +50,13 @@
     <footer>
         <p id="footer-text">&copy; 2025 G Family. All rights reserved.</p>
     </footer>
+    
+    <style>
+        /* Apply Hangyaku font to all Japanese text or specific sections */
+        .japanese-text {
+            font-family: 'Hangyaku Font', sans-serif;
+        }
+    </style>
 
     <script>
     // Language translations
@@ -83,8 +92,15 @@
             document.getElementById("listen-now-btn").innerText = content.listenNowBtn;
             document.getElementById("footer-text").innerText = content.footerText;
             document.getElementById("current-language").innerHTML = `<span class="fi ${content.flagIcon}"></span> ${content.languageText}`;
+
+       // Apply Japanese font if the language is Japanese
+       if (lang === "ja") {
+                    document.body.style.fontFamily = "'hangyaku-font', sans-serif";
+                } else {
+                    document.body.style.fontFamily = "'Arial', sans-serif"; // Default font
+                }
+            }
         }
-    }
 
     // Function to handle language change
     function changeLanguage(lang) {
