--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.cdnfonts.com/css/pp-right-gothic" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/old-english-five" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.2.3/css/flag-icons.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -46,7 +47,7 @@
         <p id="about-desc">G Family is a group that brings together diverse musical talents to create a unique sound. Our journey started with a shared passion for music and a dream to make a difference through our talents. With a fusion of different genres, our music speaks to the heart and soul. Join us as we share our story and continue to grow with our fans.</p>
         <p id="about-mission">Our mission is to inspire, connect, and create lasting memories with our music.</p>
     </section>
-
+    <div class="separator"></div>
     <section id="artists">
         <h2 id="artists-title">Artists</h2>
         <div class="artist-container">
@@ -69,11 +70,30 @@
                 </div>
             </div>
         </div>
+        <div class="separator"></div>
     </section>
+    
 
-    <footer>
+     <!-- Footer -->
+     <footer>
+        <div class="footer-logo" onclick="scrollToTop()">
+            <span class="glow">G</span>
+        </div>
+        <div class="social-links">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+        </div>
         <p id="footer-text">&copy; 2025 G Family. All rights reserved.</p>
     </footer>
+
+    <!-- Scroll to Top Script -->
+    <script>
+    function scrollToTop() {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+    </script>
 
     <script>
         // Language translations
