--- a/events.html
+++ b/events.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.cdnfonts.com/css/old-english-five" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/pp-right-gothic" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/helvair-graffiti" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.2.3/css/flag-icons.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header>
