--- a/music.html
+++ b/music.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.cdnfonts.com/css/old-english-five" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/pp-right-gothic" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/helvair-graffiti" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.2.3/css/flag-icons.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -38,9 +40,27 @@
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5ZLUm9eab8y3tqQ1OhQSHI?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
     </section>
+    <div class="separator"></div>
 
-    <footer>
-        <p>&copy; 2025 G Family. All rights reserved.</p>
-    </footer>
+   <!-- Footer -->
+   <footer>
+    <div class="footer-logo" onclick="scrollToTop()">
+        <span class="glow">G</span>
+    </div>
+    <div class="social-links">
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+    </div>
+    <p id="footer-text">&copy; 2025 G Family. All rights reserved.</p>
+</footer>
+
+<!-- Scroll to Top Script -->
+<script>
+function scrollToTop() {
+    window.scrollTo({ top: 0, behavior: 'smooth' });
+}
+</script>
 </body>
 </html>
