--- a/index.html
+++ b/index.html
@@ -80,11 +80,18 @@
             <span class="glow">G</span>
         </div>
         <div class="social-links">
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://www.facebook.com/G_Family" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-facebook"></i></a>
+            <a href="https://twitter.com/GFamilyJapan" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.instagram.com/kingstown_gfam" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.youtube.com/@yourchannel" target="_blank" rel="noopener noreferrer">
+                <i class="fa-brands fa-youtube"></i></a>
+            <a href="https://tiktok.com/yourhandle" target="_blank" rel="noopener noreferrer">
+                    <i class="fa-brands fa-tiktok"></i></a>
         </div>
+        
         <p id="footer-text">&copy; 2025 G Family. All rights reserved.</p>
     </footer>
 
